##########################################################################
# ph0llux:76e120d5f58ef5f9fae1deb4b3b564b3c64e88b69bb8e35fa31764d1a37489d3
##########################################################################
#########################################################################
# pk:0c3e929efaa374b40490f0ee486f235539a923c88359df6c7181e567a9fbd636
#########################################################################
[package]
name = "phollaits"
version = "0.2.6"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = true
license = "BSD-3-Clause"
homepage = "https://github.com/ph0llux/phollaits"
repository = "https://github.com/ph0llux/phollaits"
keywords = [ "traits" ]
description = """
Here is a collection of traits that I use in my projects from time to time -
feel free to use them in your projects as well.
"""

[lib]
name = "phollaits"
path = "src/lib/mod.rs"
test = true
bench = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
ring = "0.16"
md5  = "0.7"
data-encoding = "2"
tar = "0.4"
base64 = "0.13"