##########################################################################
# ph0llux:2604fc54eb9ce91fa55b2ba1501a3d7eaab53c06b8318469fad5259505eae059
##########################################################################
[package]
name = "phollaits"
version = "0.3.1"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = true
license = "BSD-3-Clause"
homepage = "https://github.com/ph0llux/phollaits"
repository = "https://github.com/ph0llux/phollaits"
keywords = [ "traits" ]
description = """
Here is a collection of traits that I use in my projects from time to time -
feel free to use them in your projects as well.
"""

[lib]
name = "phollaits"
path = "src/lib/mod.rs"
test = true
bench = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
md-5 = "0.9.1"
sha-1 = "0.9.6"
sha2 = "0.9.5"
tar = "0.4"
base64 = "0.13"
data-encoding = "2.3.2"