##########################################################################
# ph0llux:e9fb0209be6830c6296d6fc34d9f35949edad14e97f866bde751a4bea83a7cb9
##########################################################################
[package]
name = "phollaits"
version = "0.3.2"
authors = ["ph0llux <ph0llux@pm.me>"]
edition = "2018"
publish = true
license = "BSD-3-Clause"
homepage = "https://github.com/ph0llux/phollaits"
repository = "https://github.com/ph0llux/phollaits"
keywords = [ "traits" ]
description = """
Here is a collection of traits that I use in my projects from time to time -
feel free to use them in your projects as well.
"""

[lib]
name = "phollaits"
path = "src/lib/mod.rs"
test = true
bench = true
doc = true
edition = "2018"
crate-type = ["lib"]

[dependencies]
md-5 = "0.9.1"
sha-1 = "0.9.6"
sha2 = "0.9.5"
tar = "0.4"
base64 = "0.13"
data-encoding = "2.3.2"
hex = "0.4.3"